--- a/HeuristicLab.CodeEditor/3.3/HeuristicLab.CodeEditor-3.3.csproj
+++ b/HeuristicLab.CodeEditor/3.3/HeuristicLab.CodeEditor-3.3.csproj
@@ -147,9 +147,9 @@
       <Project>{4ABA047D-46DD-4608-9E4A-41C5F92FDBB1}</Project>
       <Name>HeuristicLab.SharpDevelop-3.1.1.5327</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\3.3\HeuristicLab.PluginInfrastructure-3.3.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
-      <Name>HeuristicLab.PluginInfrastructure</Name>
+      <Name>HeuristicLab.PluginInfrastructure-3.3</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
