Extended set of available functions for symbolic regression and added test cases for the extended function set. #1013
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3841 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -100,12 +100,27 @@
     <Compile Include="MatrixExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Symbolic\ArithmeticExpressionGrammar.cs" />
+    <Compile Include="Symbolic\FullFunctionalExpressionGrammar.cs" />
     <Compile Include="Symbolic\ISymbolicExpressionTreeInterpreter.cs" />
     <Compile Include="Symbolic\SimpleArithmeticExpressionInterpreter.cs" />
     <Compile Include="Symbolic\SymbolicSimplifier.cs" />
     <Compile Include="Symbolic\Symbols\Addition.cs" />
     <Compile Include="Symbolic\Symbols\Constant.cs" />
     <Compile Include="Symbolic\Symbols\ConstantTreeNode.cs" />
+    <Compile Include="Symbolic\Symbols\LaggedVariable.cs" />
+    <Compile Include="Symbolic\Symbols\LaggedVariableTreeNode.cs" />
+    <Compile Include="Symbolic\Symbols\GreaterThan.cs" />
+    <Compile Include="Symbolic\Symbols\LessThan.cs" />
+    <Compile Include="Symbolic\Symbols\And.cs" />
+    <Compile Include="Symbolic\Symbols\Or.cs" />
+    <Compile Include="Symbolic\Symbols\Not.cs" />
+    <Compile Include="Symbolic\Symbols\Logarithm.cs" />
+    <Compile Include="Symbolic\Symbols\Exponential.cs" />
+    <Compile Include="Symbolic\Symbols\Sine.cs" />
+    <Compile Include="Symbolic\Symbols\Cosine.cs" />
+    <Compile Include="Symbolic\Symbols\Tangent.cs" />
+    <Compile Include="Symbolic\Symbols\Average.cs" />
+    <Compile Include="Symbolic\Symbols\IfThenElse.cs" />
     <Compile Include="Symbolic\Symbols\Division.cs" />
     <Compile Include="Symbolic\Symbols\Multiplication.cs" />
     <Compile Include="Symbolic\Symbols\Subtraction.cs" />
