#866  * forgot to commit
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3860 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Drivers\ExternalEvaluationProcessDriver.cs" />
     <Compile Include="Drivers\ExternalEvaluationStreamDriver.cs" />
     <Compile Include="ExternalEvaluationProblem.cs" />
+    <Compile Include="ExternalEvaluationSolutionCreator.cs" />
     <Compile Include="ExternalEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsExternalEvaluationPlugin.cs" />
     <Compile Include="Interfaces\IExternalEvaluationDriver.cs" />
