#866  * Worked on view for `ExternalEvaluationProcessDriver` #1019  * Added missing events in `SingleObjectiveTestFunctionProblem`
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3865 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
@@ -124,6 +124,11 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ExternalEvaluationProcessDriverView.resx">
+      <DependentUpon>ExternalEvaluationProcessDriverView.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
