#866  * Updated `ExternalEvaluationProblem`  * Removed the custom crossover, manipulator, and solution creator (they're replaced with the !UserDefined ones)  * Renamed all drivers to channels  * Added a client that takes the role of the previous driver  * Moved the `BestScopeSolutionAnalyzer` into Analysis (it's a generic operator after all)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3872 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
+++ b/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
@@ -86,6 +86,7 @@
     <None Include="HeuristicLabAnalysisPlugin.cs.frame" />
     <Compile Include="BestAverageWorstQualityAnalyzer.cs" />
     <Compile Include="BestAverageWorstQualityCalculator.cs" />
+    <Compile Include="BestScopeSolutionAnalyzer.cs" />
     <Compile Include="BestQualityMemorizer.cs" />
     <Compile Include="QualityAnalyzer.cs" />
     <Compile Include="MinAverageMaxValueAnalyzer.cs" />
