#866  * Added license headers to designer files  * Refactored message building, to be user customizable and better extendable   * A `SolutionMessageBuilder` holds several Converters   * A Converter specifies several types to convert and a conversion method  * `ExternalEvaluator` has the message builder as parameter and exposes it to the UI through the parameters collection  * The proto file has been updated to include a length field in the array variables  * Converters exist for all types in !HeuristicLab.Data
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3881 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
@@ -82,6 +82,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabProblemsExternalEvaluationPlugin.cs.frame" />
+    <Compile Include="Converters\BoolConverter.cs" />
+    <Compile Include="Converters\TimeSpanValueConverter.cs" />
+    <Compile Include="Converters\DateTimeValueConverter.cs" />
+    <Compile Include="Converters\DoubleConverter.cs" />
+    <Compile Include="Converters\IntegerConverter.cs" />
+    <Compile Include="Converters\StringConverter.cs" />
     <Compile Include="Drivers\EvaluationServiceClient.cs" />
     <Compile Include="Drivers\EvaluationChannel.cs" />
     <Compile Include="Drivers\EvaluationProcessChannel.cs" />
@@ -92,10 +98,11 @@
     <Compile Include="Interfaces\IEvaluationServiceClient.cs" />
     <Compile Include="Interfaces\IEvaluationChannel.cs" />
     <Compile Include="Interfaces\IExternalEvaluationProblemEvaluator.cs" />
+    <Compile Include="Interfaces\IItemToSolutionMessageConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Properties\AssemblyInfo.frame" />
     <Compile Include="Protos\ExternalEvaluationMessages.cs" />
-    <Compile Include="SolutionMessageBuilding.cs" />
+    <Compile Include="SolutionMessageBuilder.cs" />
     <None Include="Protos\ProcessProtos.cmd" />
   </ItemGroup>
   <ItemGroup>
