--- a/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
@@ -96,8 +96,18 @@
     </Compile>
     <Compile Include="HeuristicLabProblemsExternalEvaluationViewsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SolutionMessageBuilderView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SolutionMessageBuilderView.Designer.cs">
+      <DependentUpon>SolutionMessageBuilderView.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
+      <Project>{958B43BC-CC5C-4FA2-8628-2B3B01D890B6}</Project>
+      <Name>HeuristicLab.Collections-3.3</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Common\3.3\HeuristicLab.Common-3.3.csproj">
       <Project>{A9AD58B9-3EF9-4CC1-97E5-8D909039FF5C}</Project>
       <Name>HeuristicLab.Common-3.3</Name>
@@ -136,6 +146,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EvaluationServiceClientView.resx">
       <DependentUpon>EvaluationServiceClientView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SolutionMessageBuilderView.resx">
+      <DependentUpon>SolutionMessageBuilderView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
