#866  * Added tcp channel for communicating messages  * Removed unnecessary enabled propagation in `SolutionMessageBuilderView`
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3883 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Drivers\EvaluationChannel.cs" />
     <Compile Include="Drivers\EvaluationProcessChannel.cs" />
     <Compile Include="Drivers\EvaluationStreamChannel.cs" />
+    <Compile Include="Drivers\EvaluationTCPChannel.cs" />
     <Compile Include="ExternalEvaluationProblem.cs" />
     <Compile Include="ExternalEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsExternalEvaluationPlugin.cs" />
