#866  * Fixed `EvaluationTCPChannel`   * Message delimiter and message are sent in the same call to socket.Send  * Added `EvaluationTCPChannelView`
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3890 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
@@ -94,6 +94,12 @@
     <Compile Include="EvaluationProcessChannelView.Designer.cs">
       <DependentUpon>EvaluationProcessChannelView.cs</DependentUpon>
     </Compile>
+    <Compile Include="EvaluationTCPChannelView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EvaluationTCPChannelView.Designer.cs">
+      <DependentUpon>EvaluationTCPChannelView.cs</DependentUpon>
+    </Compile>
     <Compile Include="HeuristicLabProblemsExternalEvaluationViewsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolutionMessageBuilderView.cs">
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EvaluationServiceClientView.resx">
       <DependentUpon>EvaluationServiceClientView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EvaluationTCPChannelView.resx">
+      <DependentUpon>EvaluationTCPChannelView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SolutionMessageBuilderView.resx">
       <DependentUpon>SolutionMessageBuilderView.cs</DependentUpon>
