Improved code for analyzers for SVR and symbolic regression. #1009
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3892 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.DataAnalysis.Regression/3.3/HeuristicLab.Problems.DataAnalysis.Regression-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis.Regression/3.3/HeuristicLab.Problems.DataAnalysis.Regression-3.3.csproj
@@ -83,6 +83,9 @@
     <None Include="HeuristicLab.snk" />
     <None Include="HeuristicLabProblemsDataAnalysisRegressionPlugin.cs.frame" />
     <None Include="Properties\AssemblyInfo.frame" />
+    <Compile Include="Analyzers\RegressionSolutionAnalyzer.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="HeuristicLabProblemsDataAnalysisRegressionPlugin.cs" />
     <Compile Include="LinearRegression\LinearRegressionSolutionCreator.cs" />
     <Compile Include="LinearRegression\LinearRegressionUtil.cs" />
