#866  * VS not saving project file automatically....
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3898 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation/3.3/HeuristicLab.Problems.ExternalEvaluation-3.3.csproj
@@ -165,6 +165,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ExternalEvaluationCD.cd" />
     <None Include="HeuristicLab.snk" />
     <None Include="Protos\ExternalEvaluationMessages.proto" />
   </ItemGroup>
