Add EasyXmlGenerator for easier review of generated XML. (#1139)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3935 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Default\Xml\Compact\IntList2XmlSerializer.cs" />
     <Compile Include="Default\Xml\Compact\NumberArray2XmlSerializerBase.cs" />
     <Compile Include="Default\Xml\Compact\NumberEnumeration2XmlSerializerBase.cs" />
+    <Compile Include="Default\Xml\EasyXmlGenerator.cs" />
     <Compile Include="Default\Xml\Primitive\System.Drawing\Bitmap2XmlSerializer.cs" />
     <Compile Include="Default\Xml\Primitive\Bool2XmlSerializer.cs" />
     <Compile Include="Default\Xml\Primitive\Byte2XmlSerializer.cs" />
