Estimate or calculate StringBuffer sizes in advance, use iterator over string splits instead of arrays. (#1138)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3937 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -97,6 +97,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auxiliary\StringExtensions.cs" />
     <Compile Include="Auxiliary\TypeLoader.cs" />
     <Compile Include="Auxiliary\TypeNameParser.cs" />
     <Compile Include="Auxiliary\ReflectionTools.cs" />
